# scheduler-engine

./: .gitignore  CMakeLists.txt  README.md  test_scheduler
data/: small_sample.csv
src/: greedy_scheduler.cpp  greedy_scheduler.h  io.cpp  io.h  main.cpp  metrics.cpp  metrics.h  models.h  weighted_scheduler.cpp  weighted_scheduler.h
tests/: test_scheduler.cpp
